<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:woloactivityapp="http://schemas.android.com/apk/res/com.woloactivityapp.main"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/backgroundcolor"
    android:orientation="vertical" >

    <com.woloactivityapp.common.CustomTextView
        android:id="@+id/titleTextView"
        android:layout_width="fill_parent"
        android:layout_height="100px"
        android:background="@drawable/titlebar"
        android:gravity="center"
        android:text="@string/registration"
        android:textColor="@color/titlecolor"
        android:textSize="60px"
        android:textStyle="bold"
        woloactivityapp:typeface="Roboto_Regular" >
    </com.woloactivityapp.common.CustomTextView>

    <ScrollView
        android:id="@+id/parentScrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/backgroundcolor" >

        <LinearLayout
            android:id="@+id/rootlayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundcolor"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/firstnameEditText"
                android:layout_width="590px"
                android:layout_height="100px"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:background="@color/white"
                android:cursorVisible="true"
                android:gravity="left|center_vertical"
                android:hint="First Name"
                android:inputType="textCapSentences"
                android:padding="4sp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textCursorDrawable="@null"
                android:textSize="40px" />

            <EditText
                android:id="@+id/lastnameEditText"
                android:layout_width="590px"
                android:layout_height="100px"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:cursorVisible="true"
                android:gravity="left|center_vertical"
                android:hint="Last Name"
                android:inputType="textCapSentences"
                android:padding="4sp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textCursorDrawable="@null"
                android:textSize="40px" />

            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="590px"
                android:layout_height="100px"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:cursorVisible="true"
                android:gravity="left|center_vertical"
                android:hint="Phone Number"
                android:inputType="phone"
                android:padding="4sp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textCursorDrawable="@null"
                android:textSize="40px" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="590px"
                android:layout_height="100px"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:cursorVisible="true"
                android:gravity="left|center_vertical"
                android:hint="@string/youremail"
                android:inputType="textEmailAddress"
                android:padding="4sp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textCursorDrawable="@null" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="590px"
                android:layout_height="100px"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:cursorVisible="true"
                android:gravity="left|center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="4sp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textCursorDrawable="@null" />

            <EditText
                android:id="@+id/confirmPasswordEditText"
                android:layout_width="590px"
                android:layout_height="100px"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:cursorVisible="true"
                android:gravity="left|center_vertical"
                android:hint="@string/confirmpassword"
                android:inputType="textPassword"
                android:padding="4sp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textCursorDrawable="@null" />

            <TextView
                android:id="@+id/termsTitleTextView"
                android:layout_width="590px"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="left|center_vertical"
                android:padding="4sp"
                android:singleLine="true"
                android:text="Terms and Conditions"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <WebView
                android:id="@+id/webView"
                android:layout_width="590px"
                android:layout_height="1000px"
                android:layout_gravity="center_horizontal"
                android:isScrollContainer="false" />

            <CheckBox
                android:id="@+id/acceptCheckBox"
                android:layout_width="590px"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:button="@drawable/checkbtn_selector"
                android:gravity="left|center_vertical"
                android:singleLine="true"
                android:text="I Agree"
                android:textColor="@color/white"
                android:textSize="40px" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="590px"
                android:layout_height="100px"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bluebtn"
                android:gravity="center"
                android:padding="4sp"
                android:singleLine="true"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="60px" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>